--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
         <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
         <!-- Stylesheet -->
-        <link rel="stylesheet" href="assts/css/style.css">
+        <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <header>Header</header>
     <main>Main Content</main>
     <Footer>Footer</Footer>
+    
 </body>
 
 </html>
