--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 </head>
 
 <body>
-    <header>Header</header>
+    <header>
+      <a href="index.html">
+        <h1 id="logo">love running</h1>
+        
     <main>Main Content</main>
     <Footer>Footer</Footer>
     
