--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
     <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, excercise" 
-    <title>Love Running</title>
+    <meta> <title>Love Running</title><meta>
         <!-- favicon -->
         <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
@@ -20,8 +20,23 @@
 <body>
     <header>
       <a href="index.html">
-        <h1 id="logo">love running</h1>
-        
+        <h1 id="logo">Love running</h1>
+      </a>
+      <nav>
+        <ul>
+            <li>
+                <a href="">Home</a>               
+            </li>
+            <li> 
+                <a href="">Gallery</a>              
+            </li>
+            <li> 
+                <a href="">Sign Up</a>              
+            </li>
+
+        </ul>
+      </nav> 
+    </header> 
     <main>Main Content</main>
     <Footer>Footer</Footer>
     
