--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <h1 id="logo">Love running</h1>
       </a>
       <nav>
-        <ul>
+        <ul id="menu">
             <li>
-                <a href="">Home</a>               
+                <a href="" class="active">Home</a>               
             </li>
             <li> 
                 <a href="">Gallery</a>              
