--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <!-- Meta tags for search engines -->
     <meta name="description"
         content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
-    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, excercise" 
-    <meta> <title>Love Running</title><meta>
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, excercise">
+    <title>Love Running</title>
         <!-- favicon -->
         <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
