--- a/index.html
+++ b/index.html
@@ -9,39 +9,48 @@
         content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
     <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, excercise">
     <title>Love Running</title>
-        <!-- favicon -->
-        <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-        <!-- Stylesheet -->
-        <link rel="stylesheet" href="assets/css/style.css">
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 
 <body>
     <header>
-      <a href="index.html">
-        <h1 id="logo">Love running</h1>
-      </a>
-      <input type="checkbox" id="nav-toggle" name="nav-toggle">
-      <label for="nav-toggle" class="nav-toggle-label">X</label>
-      <nav>
-        <ul id="menu">
-            <li>
-                <a href="" class="active">Home</a>               
-            </li>
-            <li> 
-                <a href="">Gallery</a>              
-            </li>
-            <li> 
-                <a href="">Sign Up</a>              
-            </li>
+        <a href="index.html">
+            <h1 id="logo">Love running</h1>
+        </a>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <nav>
+            <ul id="menu">
+                <li>
+                    <a href="" class="active">Home</a>
+                </li>
+                <li>
+                    <a href="">Gallery</a>
+                </li>
+                <li>
+                    <a href="">Sign Up</a>
+                </li>
+
+            </ul>
+        </nav>
+    </header>
+    <main>Main Content</main>
+    <Footer>
+        <ul>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
 
         </ul>
-      </nav> 
-    </header> 
-    <main>Main Content</main>
-    <Footer>Footer</Footer>
-    
+
+    </Footer>
+<!-- Font awesome kit -->
+<script src="https://kit.fontawesome.com/95e802f1cd.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
