Add remaining links to footer

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1 id="logo">Love running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
                 <li>
@@ -44,13 +44,25 @@
     <Footer>
         <ul>
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li><a href="https://twitter.com/?lang=en" target="_blank" rel="noopener"
+                    aria-label="Visit our X page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></a>
+            </li>
+
 
         </ul>
 
     </Footer>
-<!-- Font awesome kit -->
-<script src="https://kit.fontawesome.com/95e802f1cd.js" crossorigin="anonymous"></script>
+    <!-- Font awesome kit -->
+    <script src="https://kit.fontawesome.com/95e802f1cd.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
