--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </header>
     <main>Main Content</main>
     <Footer>
-        <ul>
+        <ul id="social-networks">
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
