--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
 
         </nav>
     </header>
-    <main>Main Content</main>
+    <main>
+        <section id="hero">
+
+        </section>
+    </main>
     <Footer>
         <ul id="social-networks">
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
