--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css">
+   <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
+    <link rel="stylesheet" href="assets/css/style2.css">
 
 </head>
 
@@ -45,7 +46,7 @@
     <main>
         <section id="hero">
              <div id="cover-text">
-                <h2>Love Running</h2>
+                <h2 >Love Running</h2>
                 <h3>Dublin Docklands & Phoenix Park</h3>
              </div>
         </section>
