--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style4.css">
 
 </head>
 
@@ -28,7 +28,7 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="./index.html" >Home</a>
+                    <a href="./index.html">Home</a>
                 </li>
                 <li>
                     <a href="./gallery.html" class="active">Gallery</a>
@@ -41,7 +41,23 @@
 
         </nav>
     </header>
-    <main>Main Content</main>
+    <main>
+        <section id="gallery">
+            <div id="photos">
+                <img src="assets/images/athletes.webp" alt="Two athletes running together">
+                <img src="assets/images/girls.webp" alt="Three girls at charity paint running festival">
+                <img src="assets/images/runner3.webp" alt="Solo male runner jogging on beach">
+                <img src="assets/images/man.webp" alt="Man at charity paint running festival">
+                <img src="assets/images/runner1.webp" alt="Solo female runner jogging through Phoenix Park">
+                <img src="assets/images/runner2.webp" alt="Runners competing in marathon">
+                <img src="assets/images/runner4.webp" alt="Solo female runner jogging on beach">
+                <img src="assets/images/running_gang.webp"
+                    alt="Large group of runners taking part in a marathon on a rainy day">
+                <img src="assets/images/mud-run.webp"
+                    alt="Two women runners taking a muddy selfie after the Mud Runners championship">
+            </div>
+        </section>
+    </main>
     <Footer>
         <ul id="social-networks">
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
